# library-management-pe

./: README.md  USAGE.md  booklog_auto_add.py  camera_isbn.py  pyproject.toml  test_booklog.py
docs/: USAGE.html  USAGE.md  index.html  manifest.json  script.js  style.css
