[project]
name = "library-management-pe"
version = "0.1.0"
description = "ISBN barcode scanner with web interface and Booklog auto-add tool"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = ""}]
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "playwright>=1.58.0",
    "pyzbar>=0.1.9",
    "Pillow>=11.0.0",
    "flask>=3.0.0",
]
